tests/semantic/fact_ctr/fact_ctr.err
Error: Counter in fact in file fact_ctr.dl at line 6
F($,"AA").
--^--------
1 errors generated, evaluation aborted
