tests/semantic/fact_ctr/fact_ctr.dl
.type Node 

.decl F (node1:number, node2:Node) input

// not ok [variable]
F($,"AA").

